# nutrition-agent

./: .env.example  .gitignore  EXPERIMENT_REPORT.md  Makefile  README.md  claude_log.md  evaluate.py  main.py  pyproject.toml  test_fatsecret_api.py
agents/: base_agent.py  nutrition_planner.py
config/: prompts.yaml
data/test_prompts/: t1.json  t2.json  t3.json  t4.json
evaluators/: evaluator_manager.py  nutrition_evaluator.py
evaluators/reward_functions/: base.py  constraint.py  inventory.py  nutrition.py  quality.py
notebooks/: comprehensive_evaluation_demo.ipynb  nutrition_agent_demo.ipynb
tools/: fatsecret_tool.py  nutrition_calculator.py
