[tool.poetry]
name = "nutrition-agent"
version = "0.1.0"
description = "An AI agent for meal planning with nutrition balance"
authors = ["Nutrition Agent Team"]
readme = "README.md"
packages = [{include = "agents"}, {include = "tools"}, {include = "evaluators"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
anthropic = "^0.19.0"
asyncio = "*"
aiohttp = "^3.9.0"
requests-oauthlib = "^1.3.1"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
rich = "^13.0.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
ipykernel = "^6.25.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=agents --cov=tools --cov=evaluators --cov-report=html"