[project]
authors = [
    {name = "Nutrition Agent Team"},
]
requires-python = "<3.13,>=3.12"
dependencies = [
    "openai<2.0.0,>=1.0.0",
    "anthropic<1.0.0,>=0.19.0",
    "requests-oauthlib<2.0.0,>=1.3.1",
    "pydantic<3.0.0,>=2.0.0",
    "python-dotenv<2.0.0,>=1.0.0",
    "pyyaml<7.0,>=6.0",
    "numpy>=2.3.0",
    "pandas<3.0.0,>=2.0.0",
    "rich>=13.9.4",
    "typer>=0.16.0",
]
name = "nutrition-agent"
version = "0.1.0"
description = "An AI agent for meal planning with nutrition balance"
readme = "README.md"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "mypy<2.0.0,>=1.16.0",
    "ipykernel<7.0.0,>=6.29.5",
    "matplotlib<4.0.0,>=3.10.0",
    "seaborn<1.0.0,>=0.13.0",
    "types-requests-oauthlib>=2.0.0.20250516",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.ruff]
target-version = "py312"
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "W293",  # blank line with whitespace
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=agents --cov=tools --cov=evaluators --cov-report=html"
